crates/vize_canon/src/snapshots/vize_canon__batch__type_checker__tests__batch_type_checker_ambient_dts_global_usage.snap
---
source: crates/vize_canon/src/batch/type_checker/tests.rs
assertion_line: 293
expression: snapshot
---
[
    (
        "src/App.vue",
        Some(
            2551,
        ),
        "2:23:error Property 'toFixed' does not exist on type 'string'. Did you mean 'fixed'?",
    ),
]
