crates/vize_canon/src/snapshots/vize_canon__batch__type_checker__tests__batch_type_checker_declaration_emit_outputs.snap
---
source: crates/vize_canon/src/batch/type_checker/tests.rs
expression: snapshot
---
[
    (
        "App.vue.d.ts",
        "import type { __VizeComponentInputProps, __VizeComponentInputGuard, __VizeComponentInput, __VizeAuthoredKeyWitness, __VizeUsePublicInstance, __VizePublicEmit, __VizePublicSlots, __VizeComponentPublicBase } from \"./__vize_helpers.js\";\nexport interface PublicProps {\n    count: number;\n}\nexport type Props = PublicProps;\nexport type Emits = {};\ntype __VizeSlots = {};\nexport type { __VizeSlots as Slots };\ntype __VizeComponentInstance = {\n    $props: Props;\n    readonly __vizeRawProps?: Props;\n    $emit: __VizePublicEmit<Emits>;\n    $slots: __VizePublicSlots<__VizeSlots>;\n} & __VizeComponentPublicBase;\ntype __VizeComponentConstructor = new <__VizeAuthoredProps = unknown>(props?: __VizeAuthoredProps & __VizeComponentInput<Props, {}, __VizeAuthoredProps>, ...args: any[]) => __VizeUsePublicInstance<__VizeAuthoredProps> extends true ? __VizeComponentInstance : Omit<__VizeComponentInstance, '$props'> & {\n    $props: __VizeAuthoredKeyWitness<__VizeAuthoredProps> & __VizeComponentInputProps<Props, {}> & __VizeComponentInputGuard<Props, {}, __VizeAuthoredProps>;\n};\ntype __VizeVueComponentOptions = {\n    [key: string]: any;\n    name?: string;\n    __name?: string;\n    __file?: string;\n    __vccOpts?: any;\n    props?: any;\n    emits?: any;\n    slots?: any;\n    setup?: any;\n    render?: Function;\n    components?: any;\n    directives?: any;\n    inheritAttrs?: boolean;\n    compatConfig?: any;\n    call?: (this: unknown, ...args: unknown[]) => never;\n    __isFragment?: never;\n    __isTeleport?: never;\n    __isSuspense?: never;\n    __defaults?: any;\n    __vapor?: boolean;\n    __multiRoot?: boolean;\n    __isKeepAlive?: boolean;\n    __isBuiltIn?: boolean;\n};\ndeclare const __vize_component__: {\n    readonly __vizeRawProps?: Props;\n} & __VizeComponentConstructor & __VizeVueComponentOptions;\nexport default __vize_component__;\n",
    ),
    (
        "__vize_helpers.d.ts",
        "// Shared helper types for vize-generated declaration files.\n// Generated by vize\ntype __EmitShape<T> = T extends (...args: any[]) => any ? T : T extends Record<string, any> ? { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; } : Record<string, any[]>;\ntype __EmitArgs<T, K extends keyof T> = T[K] extends any[] ? T[K] : any[];\ntype __EmitFn<T, __S = __EmitShape<T>, __K extends keyof __S & string = keyof __S & string, __U = { [K in __K]: (event: K, ...args: __EmitArgs<__S, K>) => void }[__K]> = __S extends (...args: any[]) => any ? __S : [__K] extends [never] ? (event: never, ...args: any[]) => void : (__U extends unknown ? (fn: __U) => void : never) extends (fn: infer __I) => void ? __I : never;\ntype __RuntimePropValue<T> = T extends abstract new (...args: any[]) => infer V ? V : T extends (...args: any[]) => infer V ? V : never;\ntype __RuntimePropCtorInner<T> = T extends null | undefined ? never : T extends readonly (infer U)[] ? __RuntimePropCtorInner<U> : T extends { type: infer U } ? __RuntimePropCtorInner<U> : T extends StringConstructor ? string : T extends NumberConstructor ? number : T extends BooleanConstructor ? boolean : T extends ArrayConstructor ? unknown[] : T extends ObjectConstructor ? Record<string, any> : T extends DateConstructor ? Date : T extends FunctionConstructor ? (...args: any[]) => any : __RuntimePropValue<T>;\ntype __RuntimePropCtor<T> = [__RuntimePropCtorInner<T>] extends [never] ? unknown : __RuntimePropCtorInner<T>;\ntype __RuntimePropHasBoolean<T> = T extends BooleanConstructor ? true : T extends readonly (infer U)[] ? __RuntimePropHasBoolean<U> : T extends { type: infer U } ? __RuntimePropHasBoolean<U> : false;\ntype __RuntimePropResolved<T> = T extends { required: true } ? true : T extends { default: any } ? true : __RuntimePropHasBoolean<T>;\ntype __RuntimePropShape<T extends Record<string, any>> = { [K in keyof T]: __RuntimePropResolved<T[K]> extends true ? __RuntimePropCtor<T[K]> : __RuntimePropCtor<T[K]> | undefined; };\ntype __VizeIsAny<T> = 0 extends (1 & T) ? true : false;\ntype __LooseRequired<T> = { [P in keyof (T & Required<T>)]: T[P] };\ntype __VizeBooleanKey<T, K extends keyof T = keyof T> = K extends any ? [Exclude<T[K], undefined>] extends [never] ? never : [Exclude<T[K], undefined>] extends [boolean] ? K : never : never; type __DefineProps<T, __BKeys extends keyof T = __VizeBooleanKey<T>> = Readonly<T> & { readonly [K in __BKeys]-?: boolean };\ntype __VizeIfAny<T, Y, N> = 0 extends (1 & T) ? Y : N;\ntype __VizeNotUndefined<T> = T extends undefined ? never : T;\ntype __VizeMappedOmit<T, K extends keyof any> = { [P in keyof T as P extends K ? never : P]: T[P] };\ntype __VizeDefaultNativeType = null | number | string | boolean | symbol | Function;\ntype __VizeInferDefault<P, T> = ((props: P) => T & {}) | (T extends __VizeDefaultNativeType ? T : never);\ntype __WithDefaultsArgs<T> = { [K in keyof T]?: __VizeInferDefault<T, T[K]> };\ntype __WithDefaultsResult<T, D, __BKeys extends keyof T = never> = T extends unknown ? Readonly<__VizeMappedOmit<T, keyof D>> & { readonly [K in keyof D as K extends keyof T ? K : never]-?: K extends keyof T ? D[K] extends undefined ? __VizeIfAny<D[K], __VizeNotUndefined<T[K]>, T[K]> : __VizeNotUndefined<T[K]> : never } & { readonly [K in __BKeys]-?: K extends keyof D ? D[K] extends undefined ? boolean | undefined : boolean : boolean } : never;\ntype __Ref<T> = import('vue').Ref<T>;\ntype __ShallowRef<T> = import('vue').ShallowRef<T>;\ntype __VizeKebabCase<S extends string> = S extends `${infer Head}${infer Tail}` ? Head extends Lowercase<Head> ? `${Head}${__VizeKebabCase<Tail>}` : `-${Lowercase<Head>}${__VizeKebabCase<Tail>}` : S;\ntype __VizeKebabProps<T> = { [K in keyof T & string as __VizeKebabCase<K>]: T[K] };\ntype __VizeRequiredKeys<T> = { [K in keyof T]-?: {} extends Pick<T, K> ? never : K }[keyof T];\ntype __VizeDomListenerProps = { [K in keyof GlobalEventHandlersEventMap as K extends string ? `on${Capitalize<K>}` : never]?: (event: GlobalEventHandlersEventMap[K]) => void };\ntype __VizeFallthroughAttrs<Owned = {}> = { class?: unknown; style?: unknown } & { [K in `data-${string}`]?: unknown } & { [K in `aria-${string}`]?: unknown } & Omit<__VizeDomListenerProps, keyof Owned>;\ntype __VizeReservedComponentInputProps = { key?: unknown; ref?: unknown };\ntype __VizeComponentInputProps<T, Declared = {}> = T extends unknown ? Partial<T> & Partial<__VizeKebabProps<T>> & Declared & __VizeFallthroughAttrs<T & Declared> & __VizeReservedComponentInputProps : never;\ntype __VizeMissingRequiredInputKeys<T, Authored, K extends __VizeRequiredKeys<T> & string = __VizeRequiredKeys<T> & string> = K extends unknown ? K extends keyof Authored ? never : __VizeKebabCase<K> extends keyof Authored ? never : K : never;\ntype __VizeIsPropKeyUnion<T, U = T> = T extends unknown ? ([U] extends [T] ? false : true) : false;\ntype __VizeIsSinglePropKey<T> = [T] extends [never] ? false : __VizeIsPropKeyUnion<T> extends true ? false : true;\ntype __VizeRelaxedDynamicUnionExtra<T, Declared, Authored, K extends keyof Authored> = [keyof Declared] extends [never] ? __VizeIsSinglePropKey<__VizeRequiredKeys<T>> extends true ? K extends string ? K extends `on${string}` ? false : Authored[K] extends true ? false : true : false : false : false;\ntype __VizeExtraInputKeys<T, Declared, Authored, Allowed, K extends keyof Authored = Exclude<keyof Authored, keyof Allowed>> = K extends unknown ? __VizeRelaxedDynamicUnionExtra<T, Declared, Authored, K> extends true ? never : K : never;\ntype __VizeComponentMissingInputGuard<T, Authored> = T extends unknown ? [__VizeMissingRequiredInputKeys<T, Authored>] extends [never] ? {} : { readonly __vizeInvalidComponentProps: { readonly missing: __VizeMissingRequiredInputKeys<T, Authored>; readonly extra: never; } } : never;\ntype __VizeComponentInputGuardFor<T, Declared, Authored, Allowed> = [__VizeMissingRequiredInputKeys<T, Authored> | __VizeExtraInputKeys<T, Declared, Authored, Allowed>] extends [never] ? {} : { readonly __vizeInvalidComponentProps: { readonly missing: __VizeMissingRequiredInputKeys<T, Authored>; readonly extra: __VizeExtraInputKeys<T, Declared, Authored, Allowed>; } };\ntype __VizeComponentInputGuard<T, Declared, Authored> = __VizeUsePublicInstance<Authored> extends true ? {} : T extends unknown ? __VizeComponentInputGuardFor<T, Declared, Authored, __VizeComponentInputProps<T, Declared>> : never;\ntype __VizeComponentInputFor<T, Declared, Authored, Allowed> = Allowed & __VizeComponentInputGuardFor<T, Declared, Authored, Allowed>;\ntype __VizeComponentInput<T, Declared, Authored> = __VizeUsePublicInstance<Authored> extends true ? __VizeComponentInputProps<T, Declared> : T extends unknown ? __VizeComponentInputFor<T, Declared, Authored, __VizeComponentInputProps<T, Declared>> : never;\ntype __VizeAuthoredKeyWitness<T> = { [K in keyof T]: unknown };\ntype __VizeIsUnknown<T> = unknown extends T ? [keyof T] extends [never] ? true : false : false;\ntype __VizeUsePublicInstance<T> = __VizeIsAny<T> extends true ? true : __VizeIsUnknown<T>;\ntype __VizePublicEmit<T, S = __EmitShape<T>, K extends keyof S & string = keyof S & string> = S extends (...args: any[]) => any ? S : [K] extends [never] ? (event: string, ...args: any[]) => void : __EmitFn<T>;\ntype __VizePublicSlots<T> = [keyof T] extends [never] ? import('vue').ComponentPublicInstance['$slots'] : T;\n// @ts-ignore TS2694/TS2307: a `vue` without `ComponentPublicInstance` must degrade component public extras to unchecked, never error.\ntype __VizeComponentPublicBase = Omit<import('vue').ComponentPublicInstance, '$props' | '$emit' | '$slots'>;\ntype __VizeOverloadProps<TOverload> = Pick<TOverload, keyof TOverload>;\ntype __VizeOverloadUnionRecursive<TOverload, TPartialOverload = unknown, TDepth extends unknown[] = []> = TDepth['length'] extends 32 ? never : TOverload extends (...args: infer TArgs) => infer TReturn ? TPartialOverload extends TOverload ? never : __VizeOverloadUnionRecursive<TPartialOverload & TOverload, TPartialOverload & ((...args: TArgs) => TReturn) & __VizeOverloadProps<TOverload>, [...TDepth, unknown]> | ((...args: TArgs) => TReturn) : never;\ntype __VizeOverloadUnion<TOverload extends (...args: any[]) => any> = Exclude<__VizeOverloadUnionRecursive<(() => never) & TOverload>, TOverload extends () => never ? never : () => never>;\ntype __VizeOverloadParameters<T extends (...args: any[]) => any> = Parameters<__VizeOverloadUnion<T>>;\ntype __VizeIsStringLiteral<T> = T extends string ? string extends T ? false : true : false;\ntype __VizeParametersToFns<T extends any[]> = string extends T[0] ? { [K in string]: (...args: T extends [e: any, ...args: infer P] ? P : any[]) => any } : { [K in T[0]]: __VizeIsStringLiteral<K> extends true ? (...args: T extends [e: infer E, ...args: infer P] ? K extends E ? P : never : never) => any : never };\ntype __EmitOptions<T> = { [K in keyof __EmitShape<T> & string]: (...args: __EmitArgs<__EmitShape<T>, K>) => any } & (__EmitShape<T> extends (...args: any[]) => any ? __VizeParametersToFns<__VizeOverloadParameters<__EmitShape<T>>> : {});\ntype __VizeCamelize<S extends string> = S extends `${infer Head}-${infer Tail}` ? `${Head}${Capitalize<__VizeCamelize<Tail>>}` : S;\ntype __VizeHandlerKey<K extends string> = `on${Capitalize<__VizeCamelize<K>>}`;\n\nexport type { __EmitShape, __EmitArgs, __EmitFn, __RuntimePropValue, __RuntimePropCtorInner, __RuntimePropCtor, __RuntimePropHasBoolean, __RuntimePropResolved, __RuntimePropShape, __VizeIsAny, __LooseRequired, __VizeBooleanKey, __DefineProps, __VizeIfAny, __VizeNotUndefined, __VizeMappedOmit, __VizeDefaultNativeType, __VizeInferDefault, __WithDefaultsArgs, __WithDefaultsResult, __Ref, __ShallowRef, __VizeKebabCase, __VizeKebabProps, __VizeRequiredKeys, __VizeDomListenerProps, __VizeFallthroughAttrs, __VizeReservedComponentInputProps, __VizeComponentInputProps, __VizeMissingRequiredInputKeys, __VizeIsPropKeyUnion, __VizeIsSinglePropKey, __VizeRelaxedDynamicUnionExtra, __VizeExtraInputKeys, __VizeComponentMissingInputGuard, __VizeComponentInputGuardFor, __VizeComponentInputGuard, __VizeComponentInputFor, __VizeComponentInput, __VizeAuthoredKeyWitness, __VizeIsUnknown, __VizeUsePublicInstance, __VizePublicEmit, __VizePublicSlots, __VizeComponentPublicBase, __VizeOverloadProps, __VizeOverloadUnionRecursive, __VizeOverloadUnion, __VizeOverloadParameters, __VizeIsStringLiteral, __VizeParametersToFns, __EmitOptions, __VizeCamelize, __VizeHandlerKey };\n",
    ),
    (
        "index.d.ts",
        "export { default as App } from './App.vue';\n",
    ),
]
