crates/vize_canon/src/snapshots/vize_canon__batch__type_checker__tests__batch_type_checker_generic_component_prop_error.snap
---
source: crates/vize_canon/src/batch/type_checker/tests.rs
expression: snapshot
---
[
    (
        "src/Parent.vue",
        Some(
            2322,
        ),
        "6:37:error Type 'number' is not assignable to type 'string'.",
    ),
]
