crates/vize_canon/src/snapshots/vize_canon__batch__type_checker__tests__batch_type_checker_vue_diagnostics.snap
---
source: crates/vize_canon/src/batch/type_checker/tests.rs
expression: snapshot
---
[
    (
        "declaration",
        "number",
    ),
    (
        "initializer",
        "\"oops\"",
    ),
]
